# auto-uv-env

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  CHANGELOG.md  CONTRIBUTE.md  LICENSE  README.md  RELEASE.md  auto-uv-env  pyproject.toml
.github/workflows/: ci.yml  docs.yml  package.yml  release.yml  test-installer.yml
docs/: CNAME  Gemfile  _config.yml  alternatives.md  contributing.md  index.md  install.sh  installation.md  serve-local.sh  uninstall.sh  usage.md
docs/_layouts/: default.html
docs/assets/css/: main.css
homebrew/: auto-uv-env.rb
packaging/debian/: control
packaging/rpm/: auto-uv-env.spec
scripts/: README.md  build-rpm.sh  bump-version.sh  check-version-consistency.sh  install.sh  release.sh
scripts/legacy/: build-deb.sh
share/auto-uv-env/: auto-uv-env.bash  auto-uv-env.fish  auto-uv-env.zsh
test/: test-deleted-venv.sh  test-security.sh  test-shell-integrations.sh  test.sh
