[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "auto-uv-env"
version = "1.0.3"
description = "Shell integration tool that automatically manages Python virtual environments using UV"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name = "Monty", email = "monty@example.com" }
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Shells",
    "Topic :: Utilities",
]
keywords = ["python", "virtual-environment", "uv", "shell", "automation"]

[project.urls]
Homepage = "https://github.com/monty/auto-uv-env"
Repository = "https://github.com/monty/auto-uv-env.git"
Issues = "https://github.com/monty/auto-uv-env/issues"

[tool.uv]
dev-dependencies = [
    "pre-commit>=3.0.0",
]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
